fix: align default sizing

--- a/ui-components/src/navigation/ProgressNav.scss
+++ b/ui-components/src/navigation/ProgressNav.scss
@@ -10,10 +10,10 @@
   --dot-padding-left-mobile: var(--bloom-s2);
   --dot-label-padding-top: var(--bloom-s4);
   --dot-label-padding-left: var(--bloom-s1);
-  --dot-font-size-desktop: var(--bloom-font-size-sm);
+  --dot-font-size-desktop: var(--bloom-font-size-base);
   --dot-font-size-mobile: var(--bloom-font-size-2xs);
   --dot-line-color: var(--bloom-color-gray-450);
-  --dot-active-font-weight: 700;
+  --dot-active-font-weight: 600;
   --dot-text-transform: capitalize;
 
   --bar-height: var(--bloom-s4);
